@@ -1,3 +1,5 @@
+HEAD
+	+ Better recovery of errors on index CGI
 3.5.1
 	+ Download files as zip archive
 3.5
